--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
