--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "productmanager",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type":"module",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "dev": "nodemon src/app.js",
-    "server": "nodemon src/app.js"
+    "start": "nodemon src/app.mjs",
+    "dev": "nodemon src/app.mjs",
+    "server": "nodemon src/app.mjs"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.4.2",
