--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "productmanager",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/app.mjs",
     "dev": "nodemon src/app.mjs",
@@ -12,14 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "mongodb": "^5.1.0",
+    "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "passport": "^0.6.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.1"
   },
